--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -39,6 +39,19 @@ pipeline {
     }
    }
   }
+  stage("docker-package") {
+   agent any
+   steps {
+    echo 'Packaging worker app with docker'
+    script {
+     docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
+      def workerImage = docker.build("iv41879/worker:v${env.BUILD_ID}", "./worker")
+      workerImage.push()
+      workerImage.push("latest")
+     }
+    } 
+   }
+  }
  }
 
  post {
