--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -1,15 +1,16 @@
 pipeline {
  
- agent {
-  docker {
-   image 'maven:3.6.1-jdk-11-slim'
-   args '-v $HOME/.m2:/root/.m2'
-  }
- }
+ agent none
  
  stages {
   stage("build") {
    when { changeset "**/worker/**" }
+   agent {
+    docker {
+     image 'maven:3.6.1-jdk-11-slim'
+     args '-v $HOME/.m2:/root/.m2'
+    }
+   }
    steps {
     echo 'Compiling worker app'
     dir('worker'){
@@ -19,6 +20,12 @@ pipeline {
   }
   stage("test") {
    when { changeset "**/worker/**" }
+   agent {
+    docker {
+     image 'maven:3.6.1-jdk-11-slim'
+     args '-v $HOME/.m2:/root/.m2'
+    }
+ 
    steps {
     echo 'Running Unit tests on worker app'
     dir('worker') {
@@ -31,6 +38,12 @@ pipeline {
     branch 'master'
     changeset "**/worker/**"
    }
+   agent {
+    docker {
+     image 'maven:3.6.1-jdk-11-slim'
+     args '-v $HOME/.m2:/root/.m2'
+    }
+ 
    steps {
     echo 'Packaging worker app'
     dir('worker') {
@@ -47,6 +60,7 @@ pipeline {
      docker.withRegistry('https://index.docker.io/v1/', 'dockerlogin') {
       def workerImage = docker.build("iv41879/worker:v${env.BUILD_ID}", "./worker")
       workerImage.push()
+      workerImage.push("${env.BRANCH_NAME}")
       workerImage.push("latest")
      }
     } 
