Set authentication method to allow all connection to DB

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -26,6 +26,8 @@ services:
        - "db-data:/var/lib/postgresql/data"
      networks:
        - instavote
+     environment:
+       - POSTGRES_HOST_AUTH_METHOD=trust
 
    result:
      image: iv41879/result:latest
